<resources>
    <string name="app_name">Aplicacion3108</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">Primer Fragmento</string>
    <string name="second_fragment_label">Segundo Fragmento</string>
    <string name="next">Segundo Fragmento</string>
    <string name="previous">Primer Fragmento</string>
    <string name="third">Tercer Fragmento</string>
    <string name="number1">Numero 1</string>
    <string name="number2">Numero 2</string>
    <string name="calculate">Calcular</string>
    <string name="sum">Sumar</string>
    <string name="subtrac">Restar</string>
    <string name="divide">Dividir</string>
    <string name="multiply">Multiplicar</string>
    <string name="response">Respuesta</string>



    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="ThirdFragmentText">Hola Tercer Fragmento.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>